[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tmp
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["aiohttp", "music_service_async_interface", "mutagen"]
